scl/binding/c_api/scl_c_api.h

using scl_size_t = scl::Size;
typedef size_t scl_size_t;
// =============================================================================
// I/O Operations (io.cpp)
// =============================================================================

// --- Memory-Mapped Arrays ---

int scl_mmap_array_open(
    const char* filepath,
    scl_size_t element_size,
    bool writable,
    void** out_ptr,
    scl_size_t* out_size
);
int scl_mmap_array_prefetch(void* ptr, scl_size_t byte_size);
int scl_mmap_array_drop_cache(void* ptr, scl_size_t byte_size);
int scl_mmap_array_advise_sequential(void* ptr, scl_size_t byte_size);
int scl_mmap_array_advise_random(void* ptr, scl_size_t byte_size);
// --- File Utilities ---

int scl_file_exists(const char* filepath, int* out_exists);
int scl_file_size(const char* filepath, scl_size_t* out_size);
int scl_create_directory(const char* dirpath);
int scl_write_binary_array(
    const char* filepath,
    const void* data,
    scl_size_t element_size,
    scl_size_t num_elements
);
int scl_read_binary_array(
    const char* filepath,
    void* data,
    scl_size_t element_size,
    scl_size_t num_elements
);
int scl_get_file_extension(const char* filepath, char* out_ext);
int scl_get_parent_directory(const char* filepath, char* out_dir);
int scl_get_filename_stem(const char* filepath, char* out_name);